--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,14 +5,11 @@ system.locale.default = en_US
 system.server.host = localhost
 system.server.port = 8080
 
-# Instance name
-instance.name = 192.168.60.16:8091
-
 # Database access properties
 database.driverClassName = oracle.jdbc.driver.OracleDriver
-database.url = jdbc:oracle:thin:@192.168.60.15:1521:xe
-database.username = smash_kirey
-database.password = kirey
+database.url = jdbc:oracle:thin:@192.168.60.16:1521:xe
+database.username = DYNTECH_SHOP
+database.password = dyntech
 
 # Misc
 default.date.format = dd.MM.yyyy hh:mm:ss
