--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,4 +20,10 @@
     <servlet-name>ShoppingCart</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
+  
+  <listener>
+    <listener-class>
+      org.springframework.security.web.session.HttpSessionEventPublisher
+    </listener-class>
+</listener>
 </web-app>
