Backend - item added to cart

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,4 +26,8 @@
       org.springframework.security.web.session.HttpSessionEventPublisher
     </listener-class>
 </listener>
+	<session-config>
+		<session-timeout>30</session-timeout>
+		<tracking-mode>COOKIE</tracking-mode>
+	</session-config>
 </web-app>
