--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,8 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
 			classpath:/META-INF/config/ShoppingCart-context.xml,
-			classpath:/META-INF/config/ShoppingCart-context-persistence.xml
+			classpath:/META-INF/config/ShoppingCart-context-persistence.xml,
+			classpath:/META-INF/config/ShoppingCart-security.xml
 		</param-value>
 	</context-param>
 	
@@ -19,6 +20,16 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
+	
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	
 	<servlet-mapping>
 		<servlet-name>ShoppingCart</servlet-name>
