--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,15 +11,16 @@
 		</param-value>
 	</context-param>
 	
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
-	
 	<servlet>
 		<servlet-name>ShoppingCart</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>ShoppingCart</servlet-name>
+		<url-pattern>/</url-pattern>
+	</servlet-mapping>
 	
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
@@ -31,19 +32,31 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	
-	<servlet-mapping>
-		<servlet-name>ShoppingCart</servlet-name>
-		<url-pattern>/</url-pattern>
-	</servlet-mapping>
+	<filter>
+		<filter-name>encodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>forceEncoding</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>encodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
   
+	<!-- Spring context loader listener -->
 	<listener>
-    	<listener-class>
-      	org.springframework.security.web.session.HttpSessionEventPublisher
-    	</listener-class>
+		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
 	</listener>
-	
-	<session-config>
-		<session-timeout>30</session-timeout>
-		<tracking-mode>COOKIE</tracking-mode>
-	</session-config>
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	<listener>
+		<listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
+	</listener>
 </web-app>
