--- a/pom.xml
+++ b/pom.xml
@@ -236,6 +236,12 @@
 			<version>1.5.0-b01</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+			<version>1.7</version>
+		</dependency>
+	
 	</dependencies>
 
 	<build>
