--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,13 @@ system.locale.default = en_US
 
 # Server parameters
 system.server.host = localhost
-system.server.port = 8080
+system.server.port = 8091
 
 # Database access properties
 database.driverClassName = oracle.jdbc.driver.OracleDriver
 database.url = jdbc:oracle:thin:@192.168.60.65:1521:xe
-database.username = DYNTECH_SHOP
-database.password = dyntech
+database.username = DYNTECH_SHOP_REGISTRATION
+database.password = dyntechshop
 
 # Misc
 default.date.format = dd.MM.yyyy hh:mm:ss
